add styling to app.css skeleton of app is complete

--- a/src/Card/Card.css
+++ b/src/Card/Card.css
@@ -45,13 +45,13 @@
   padding-top: 40%;
 }
 
-.han{
+/* .han{
   color: #333;
   font-size: 6.3em;
   padding-top: 20%;
-}
+} */
 
-.pin{
+.spanish{
     color: rgba(200, 10, 10, 1);
     font-size: 2.3em;
     padding-top: 10%;
