fix some of the wierd glitching happening with the spanish word

--- a/src/Card/Card.css
+++ b/src/Card/Card.css
@@ -35,6 +35,9 @@
 .card .back {
   height: 400px;
   width: 400px;
+  backface-visibility: hidden;
+  position: absolute;
+  overflow: hidden;
   text-align: center;
   transform: rotateY(180deg);
 }
