--- a/src/Home/homeStyle.css
+++ b/src/Home/homeStyle.css
@@ -1,5 +1,18 @@
 .linkStyle {
   text-decoration: none;
   color: green;
+  background-color: red;
+  margin: 20px;
+}
 
+.linkContainer{
+  width: 20%;
+  margin-left: 40%;
+  margin-right: 40%;
+  text-align: center;
+  padding-top: 15%;
+}
+
+.homeContainer {
+  width: 100%;
 }
