add initial styling to login component

--- a/src/scss/_login.scss
+++ b/src/scss/_login.scss
@@ -1,3 +1,14 @@
 .loginTitle{
   color: blue;
+  text-align: center;
+}
+
+.loginContainer{
+  border-style: solid;
+  border-color: black;
+  margin-top: 10%;
+  width: 30%;
+  margin-left: 35%;
+  margin-right: 35%;
+  text-align: center;
 }
