--- a/src/scss/_login.scss
+++ b/src/scss/_login.scss
@@ -1,14 +1,20 @@
 .loginTitle{
   color: blue;
+  font-size: 30px;
   text-align: center;
+  margin-bottom: 4%;
 }
 
 .loginContainer{
-  border-style: solid;
-  border-color: black;
+  // border-style: solid;
+  // border-color: black;
   margin-top: 10%;
   width: 30%;
   margin-left: 35%;
   margin-right: 35%;
   text-align: center;
+}
+
+.inputContainer{
+  margin: 2%;
 }
