--- a/src/scss/_signup.scss
+++ b/src/scss/_signup.scss
@@ -14,7 +14,6 @@
   color: blue;
   font-size: 30px;
   text-align: center;
-  margin-bottom: 4%;
 }
 
 .buttonContainer{
@@ -27,4 +26,8 @@
   border-style: solid;
   margin-left: 45%;
   margin-right: 45%;
+}
+
+.textInput{
+  margin-top: 10px;
 }
