--- a/src/scss/_addCard.scss
+++ b/src/scss/_addCard.scss
@@ -1,25 +1,21 @@
-.AddCardContainer{
-  width: 100%;
-}
-
 .cardFront{
   height: 150px;
   width: 100%;
   text-align: center;
-  margin-top: 4%;
+  margin-top: 10px;
 }
 
 
 .cardBack{
   height: 150px;
   width: 100%;
-  margin-top: 5%;
+  margin-top: 10px;
   text-align: center;
 
 }
 
 .deckName{
-  margin-top: 5%;
+  margin-top: 10px;
   text-align: center;
 
 }
@@ -27,7 +23,7 @@
 .addCardTitle{
   text-align: center;
   margin-top: 15%;
-  font-size: 40px;
+  font-size: 30px;
 }
 
 .submitButtonStyle{
@@ -41,9 +37,9 @@
 }
 
 .formContainer{
-  width: 20%;
-  margin-right: 40%;
-  margin-left: 40%;
+  width: 40%;
+  // margin-right: 40%;
+  // margin-left: 40%;
   text-align: center;
 
 }
@@ -51,4 +47,10 @@
 .linkText {
   padding: 5px;
   text-decoration: none;
+}
+
+.addCardContainer{
+  margin-top: 10%;
+  text-align: center;
+
 }
