--- a/src/scss/_addCard.scss
+++ b/src/scss/_addCard.scss
@@ -1,6 +1,6 @@
 .cardFront{
   height: 150px;
-  width: 100%;
+  // width: 100%;
   text-align: center;
   margin-top: 10px;
 }
@@ -8,7 +8,7 @@
 
 .cardBack{
   height: 150px;
-  width: 100%;
+  // width: 100%;
   margin-top: 10px;
   text-align: center;
 
@@ -37,7 +37,7 @@
 }
 
 .formContainer{
-  width: 40%;
+  // width: 40%;
   // margin-right: 40%;
   // margin-left: 40%;
   text-align: center;
@@ -52,5 +52,8 @@
 .addCardContainer{
   margin-top: 10%;
   text-align: center;
+  width: 50%;
+  // margin-left: 35%;
+  // margin-right: 35%;
 
 }
