--- a/src/scss/_addCard.scss
+++ b/src/scss/_addCard.scss
@@ -1,47 +1,30 @@
 .cardFront{
   height: 150px;
-  // width: 100%;
+  width: 200px;
   text-align: center;
   margin-top: 10px;
 }
 
-
 .cardBack{
   height: 150px;
-  // width: 100%;
+  width: 200px;
   margin-top: 10px;
   text-align: center;
-
 }
 
 .deckName{
   margin-top: 10px;
   text-align: center;
-
+  width: 200px;
 }
 
-.addCardTitle{
-  text-align: center;
-  margin-top: 15%;
-  font-size: 30px;
-}
 
 .submitButtonStyle{
   margin-top: 10%;
 }
 
 .buttonSize{
-  border-radius: 5px;
-  font-size: 2vh;
-  font-family: 'Ariel';
-}
-
-.formContainer{
-  // width: 40%;
-  // margin-right: 40%;
-  // margin-left: 40%;
-  text-align: center;
-
+  border-radius: 6px;
 }
 
 .linkText {
@@ -52,8 +35,23 @@
 .addCardContainer{
   margin-top: 10%;
   text-align: center;
-  width: 50%;
-  // margin-left: 35%;
-  // margin-right: 35%;
+  width: 100%;
+}
 
+.addCardformContainer{
+  width: 15%;
+  text-align: center;
+  margin-left: 42.5%;
+  margin-right: 42.5%;
+}
+
+.headerContainer{
+  width: 15%;
+  text-align: center;
+  margin-left: 42.5%;
+  margin-right: 42.5%;
+}
+
+.addCardTitle{
+  font-size: 30px;
 }
