header component in progress

--- a/src/Home/homeStyle.css
+++ b/src/Home/homeStyle.css
@@ -1,4 +1,4 @@
-.linkStyle {
+/* .linkStyle {
   text-decoration: none;
   color: black;
   margin: 20px;
@@ -18,4 +18,4 @@
 
 .linkStyle {
   width: 300px;
-}
+} */
