--- a/src/scss/_addCard.scss
+++ b/src/scss/_addCard.scss
@@ -45,12 +45,12 @@
   margin-right: 42.5%;
 }
 
-.headerContainer{
-  width: 15%;
-  text-align: center;
-  margin-left: 42.5%;
-  margin-right: 42.5%;
-}
+// .headerContainer{
+//   width: 15%;
+//   text-align: center;
+//   margin-left: 42.5%;
+//   margin-right: 42.5%;
+// }
 
 .addCardTitle{
   font-size: 30px;
