import header into Signup

--- a/src/scss/_header.scss
+++ b/src/scss/_header.scss
@@ -6,21 +6,14 @@
 
 .linkContainer{
   width: 100%;
-  // margin-left: 40%;
-  // margin-right: 40%;
   text-align: center;
   padding-top: 15%;
-  border-style: solid;
-  border-color: black;
+  // border-style: solid;
+  // border-color: black;
 }
 
 .headerContainer {
   width: 50%;
   margin-left: 25%;
   margin-right: 25%;
-  // text-align: center;
-}
-
-.linkStyle {
-  // width: 300px;
 }
